--- a/FitTinaV2/Views/Home/Index.cshtml
+++ b/FitTinaV2/Views/Home/Index.cshtml
@@ -3,5 +3,17 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Fit Tina</h1>
+    <h1 class="display-4">Welcome to <span style="color: #99DBFF;">:fittina:</span></h1>
+    <hr />
+</div>
+<br />
+<div class="container text-center">
+    <h4 style="color:#99DBFF;">This is a project built for CS295N.</h4>
+    <p>
+        You can use it to create and store workouts, as well as to learn how to perform new exercises.
+        Start by creating a profile and then you'll be ready to build your first workout!<br /><br />
+        I haven't added validation to anything yet, so please play nicely.<br /><br />
+        Enjoy!<br /><br />
+        :fittina:
+    </p>
 </div>
