--- a/FitTinaV2/Views/User/CreateProfile.cshtml
+++ b/FitTinaV2/Views/User/CreateProfile.cshtml
@@ -4,93 +4,136 @@
     ViewData["Title"] = "Create Profile";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Create a Profile</h1>
-</div>
+@if (@Model == null)
+{
+    <div class="text-center">
+        <h1 class="display-4">Create a Profile</h1>
+        <hr />
+    </div>
 
-<!-- FORM -->
-<div class="container">
-    <div class="form-container mx-auto">
-        <div class="card-body">
-            <form method="post" class="p-5">
-                <div class="form-group form-card p-5">
-                    <div class="row p-3">
-                        <label for="name" asp-for="Name">Your Name:</label>
-                        <input id="name" class="form-control" asp-for="Name" />
-                    </div>
-                    <br />
+    <!-- FORM -->
+    <div class="container">
+        <div class="form-container card-outer">
+            <div class="card-inner">
+                <form method="post">
+                    <div class="form-group form-card">
 
-                    <div class="row p-3">
-                        <label for="age" asp-for="Age">Your Age:</label>
-                        <input id="age" class="form-control" asp-for="Age" />
-                    </div>
-                    <br />
-
-                    @* height - old *@
-                    <!--<div class="row p-3 input-group">
-    <div class="input-group-prepend">-->
-                    @*<label for="height" asp-for="Height">Your Height:</label>*@
-                    <!--<span class="input-group-text" id="height">Your Height:</span>
-        </div>
-        <label for="feet" asp-for="Feet"></label>
-        <input id="feet" placeholder="Feet" class="form-control" asp-for="Feet" />
-
-        <label for="inches" asp-for="Inches"></label>
-        <input id="inches" placeholder="Inches" class="form-control" asp-for="Inches" />
-    </div>-->
-
-
-                    <div class="row p-3">
-                        Your Height:
-                    </div>
-                    <div class="row p-1">
-                        <label for="feet" asp-for="Feet">Feet:</label>
-                        <input id="feet" class="form-control" asp-for="Feet" />
-                    </div>
-                    <div class="row p-1">
-                        <label for="inches" asp-for="Inches">Inches:</label>
-                        <input id="inches" class="form-control" asp-for="Inches" />
-                    </div>
-
-
-
-                    <br />
-
-                    <div class="row p-3">
-                        <label for="weight" asp-for="Weight">Current Weight:</label>
-                        <input id="weight" class="form-control" asp-for="Weight" />
-                    </div>
-                    <br />
-
-                    <div class="row p-3">
-                        <label for="goal" asp-for="FitnessGoal">Your Fitness Goal:</label>
-                        <textarea id="goal" class="form-control" asp-for="FitnessGoal"></textarea>
-                    </div>
-                    <br>
-
-                    <div class="row p-3">
-                        Your Equipment Preference:
-                    </div>
-                    <div class="ml-4">
-                        <label for="equipment" asp-for="EquipmentPref">
-                            <input type="radio" value="No Equipment" id="equipment" class="input-control" asp-for="EquipmentPref" />
-                            No Equipment
-                        </label>
+                        <div class="row p-3">
+                            <label for="name" asp-for="Name"><strong>Your Name:</strong></label>
+                            <input id="name" class="form-control" asp-for="Name" />
+                        </div>
                         <br />
-                        <label for="equipment" asp-for="EquipmentPref">
-                            <input type="radio" value="Dumbbells" id="equipment" class="input-control" asp-for="EquipmentPref">
-                            Dumbbells
-                        </label>
-                    </div>
 
-                    <br>
+                        <div class="row p-3">
+                            <label for="age" asp-for="Age"><strong>Your Age:</strong></label>
+                            <input id="age" class="form-control" asp-for="Age" />
+                        </div>
+                        <br />
 
-                    <div class="row text-center">
-                        <button type="submit" class="btn btn-lg btn-success mx-auto px-5">Create Profile</button>
+
+                        <div class="row p-3">
+                            <strong>Your Height:</strong>
+                        </div>
+                        <div class="row p-1">
+
+                            <div class="col">
+                                <label for="feet" asp-for="Feet"><strong>Feet:</strong></label>
+                                <input id="feet" class="form-control" asp-for="Feet" />
+                            </div>
+
+                            <div class="col">
+                                <label for="inches" asp-for="Inches"><strong>Inches:</strong></label>
+                                <input id="inches" class="form-control" asp-for="Inches" />
+                            </div>
+                        </div>
+
+
+                        <br />
+
+                        <div class="row p-3">
+                            <label for="weight" asp-for="Weight"><strong>Current Weight:</strong></label>
+                            <input id="weight" class="form-control" asp-for="Weight" />
+                        </div>
+                        <br />
+
+                        <div class="equipment">
+                            <div class="row p-3">
+                                <strong>Your Equipment Preference:</strong>
+                            </div>
+                            <div class="ml-4">
+                                <label for="equipment" asp-for="EquipmentPref">
+                                    <input type="radio" value="No Equipment" id="equipment" class="input-control" asp-for="EquipmentPref" />
+                                    No Equipment
+                                </label>
+                                <br />
+                                <label for="equipment" asp-for="EquipmentPref">
+                                    <input type="radio" value="Dumbbells" id="equipment" class="input-control" asp-for="EquipmentPref">
+                                    Dumbbells
+                                </label>
+                            </div>
+                        </div>
+
+                        <br />
+
+                        <div class="row p-3">
+                            <label for="goal" asp-for="FitnessGoal"><strong>Your Fitness Goal:</strong></label>
+                            <textarea id="goal" class="form-control" asp-for="FitnessGoal"></textarea>
+                        </div>
+
+
+                        <br />
+
+                        <div class="row text-center">
+                            <button type="submit" class="btn btn-lg btn-success mx-auto px-5 form-button">Create Profile</button>
+                        </div>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
-</div>
-<!-- END FORM -->
+    <!-- END FORM -->
+}
+else
+{
+    <div class="text-center">
+        <h1 class="display-4">Your New Profile</h1>
+        <hr />
+    </div>
+
+    <div class="container">
+        <div class="card-outer">
+            <div class="card-inner">
+                <div class="profile-tina">
+                    <img src="~/images/tina-t.gif" alt="tina" height="350" />
+                </div>
+
+                <div class="user-props">
+                    <div class="row p-2">
+                        <span><strong>Name:</strong><br />@Model.Name</span>
+                    </div>
+
+                    <div class="row p-2">
+                        <span><strong>Age:</strong><br />@Model.Age</span>
+                    </div>
+
+                    <div class="row p-2">
+                        <span><strong>Height:</strong><br />@Model.Feet' @Model.Inches"</span>
+                    </div>
+
+                    <div class="row p-2">
+                        <span><strong>Current Weight:</strong><br />@Model.Weight</span>
+                    </div>
+
+                    <div class="row p-2">
+                        <span><strong>Equipment Preference:</strong><br />@Model.EquipmentPref</span>
+                    </div>
+
+                    <div class="row p-2">
+                        <span><strong>Fitness Goal:</strong><br />@Model.FitnessGoal</span>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+}
