--- a/FitTinaV2/Views/Workout/Build.cshtml
+++ b/FitTinaV2/Views/Workout/Build.cshtml
@@ -4,89 +4,58 @@
     ViewData["Title"] = "Build Workout";
 }
 
-
-@* if workout hasn't been built yet, display build form *@
-@if (Model == null)
+@*if workout hasn't been built yet, display build form*@
+@if (@Model == null)
 {
+
     <div class="text-center">
         <h1 class="display-4">Build a Workout</h1>
+        <hr />
     </div>
 
     <!-- FORM -->
     <div class="container">
-        <div class="form-container mx-auto">
-            <div class="card-body">
-                <form method="post" class="p-5">
-                    <div class="form-group form-card p-5">
-                        <div class="row p-3">
-                            Effort Level:
-                        </div>
-                        <div class="ml-4">
-                            <label for="effort" asp-for="Effort">
-                                <input type="radio" value="easy" id="effort" class="input-control" asp-for="Effort" />
-                                Easy
-                            </label>
-                            <br />
-                            <label for="effort" asp-for="Effort">
-                                <input type="radio" value="medium" id="effort" class="input-control" asp-for="Effort">
-                                Medium
-                            </label>
-                            <br />
-                            <label for="effort" asp-for="Effort">
-                                <input type="radio" value="challenging" id="effort" class="input-control" asp-for="Effort">
-                                Challenging
-                            </label>
+        <div class="form-container card-outer">
+            <div class="card-inner">
+                <form method="post">
+                    <div class="form-group form-card">
+
+                        <div class="effort">
+                            <div class="row p-3">
+                                <strong>Effort Level:</strong>
+                            </div>
+                            <div class="ml-1">
+                                <label for="effort" asp-for="Effort">
+                                    <input type="radio" value="easy" id="effort" class="input-control" asp-for="Effort" />
+                                    Easy
+                                </label>
+                                <br />
+                                <label for="effort" asp-for="Effort">
+                                    <input type="radio" value="medium" id="effort" class="input-control" asp-for="Effort">
+                                    Medium
+                                </label>
+                                <br />
+                                <label for="effort" asp-for="Effort">
+                                    <input type="radio" value="challenging" id="effort" class="input-control" asp-for="Effort">
+                                    Challenging
+                                </label>
+                            </div>
                         </div>
 
-                        @*<div class="row p-3">
-                            Select Duration:
-                        </div>
-                        <div class="ml-4">
-                            <label for="duration" asp-for="Duration">
-                                <input type="radio" value="15" id="duration" class="input-control" asp-for="Duration" />
-                                15 minutes
-                            </label>
-                            <br />
-                            <label for="duration" asp-for="Duration">
-                                <input type="radio" value="30" id="duration" class="input-control" asp-for="Duration">
-                                30 minutes
-                            </label>
-                            <br />
-                            <label for="duration" asp-for="Duration">
-                                <input type="radio" value="45" id="duration" class="input-control" asp-for="Duration">
-                                45 minutes
-                            </label>
-                        </div>*@
-
-                        @*<div class="row p-3">
-                            Include Cardio:
-                        </div>
-                        <div class="ml-4">
-                            <label for="cardio" asp-for="Cardio">
-                                <input type="radio" value="true" id="cardio" class="input-control" asp-for="Cardio" />
-                                Yes
-                            </label>
-                            <br />
-                            <label for="cardio" asp-for="Cardio">
-                                <input type="radio" value="false" id="cardio" class="input-control" asp-for="Cardio">
-                                No
-                            </label>
-                        </div>*@
-
-                        <br>
+                        <br />
 
                         <div class="row p-3">
-                            <label for="userName" asp-for="UserName">Your Name:</label>
+                            <label for="userName" asp-for="UserName"><strong>Your Name:</strong></label>
                             <input id="userName" class="form-control" asp-for="UserName" />
                         </div>
 
                         <div class="row p-3">
-                            <label for="workoutName" asp-for="Name">Workout Name:</label>
+                            <label for="workoutName" asp-for="Name"><strong>Workout Name:</strong></label>
                             <input id="workoutName" class="form-control" asp-for="Name" />
                         </div>
 
                         <div class="row text-center">
-                            <button type="submit" class="btn btn-lg btn-success mx-auto px-5">Build Workout</button>
+                            <button type="submit" class="btn btn-lg btn-success mx-auto px-5 form-button">Build Workout</button>
                         </div>
                     </div>
                 </form>
@@ -94,55 +63,76 @@
         </div>
     </div>
     <!-- END FORM -->
+
 }
 else
 {
     <div class="text-center">
-        <h1 class="display-4">Your New Workout</h1>
+        <h1 class="display-4">Your New Workout: @Model.Name</h1>
+        <h4>Level: @Model.Effort.ToUpper()</h4>
+        <br />
+        <hr />
     </div>
 
-    // display exercises with option to replace each
-<div class="container">
-    <div class="exercise p-5">
-        @Model.Exercise1.Name <br />
-        Sets: @Model.Sets <br />
-        Reps: @Model.Reps <br />
-        LINK TO VIDEO
-    </div>
+    <div class="form-container">
+        <div class="card-outer">
+            <div class="card-inner">
 
-    <div class="exercise p-5">
-        @Model.Exercise2.Name <br />
-        Sets: @Model.Sets <br />
-        Reps: @Model.Reps <br />
-        LINK TO VIDEO
-    </div>
+                @* display exercises *@
+                <div class="container">
+                    <div class="exercise p-2">
+                        <strong>@Model.Exercise1.Name</strong><br />
+                        Sets: @Model.Sets<br />
+                        Reps: @Model.Reps<br />
+                        <a asp-controller="Workout" asp-action="Help" asp-route-name="@Model.Exercise1.Name">Watch a demo</a>
+                    </div>
 
-    <div class="exercise p-5">
-        @Model.Exercise3.Name <br />
-        Sets: @Model.Sets <br />
-        Reps: @Model.Reps <br />
-        LINK TO VIDEO
-    </div>
+                    <hr class="ex-break" />
 
-    <div class="exercise p-5">
-        @Model.Exercise4.Name <br />
-        Sets: @Model.Sets <br />
-        Reps: @Model.Reps <br />
-        LINK TO VIDEO
-    </div>
+                    <div class="exercise p-2">
+                        <strong>@Model.Exercise2.Name</strong><br />
+                        Sets: @Model.Sets<br />
+                        Reps: @Model.Reps<br />
+                        <a asp-controller="Workout" asp-action="Help" asp-route-name="@Model.Exercise2.Name">Watch a demo</a>
+                    </div>
 
-    <div class="exercise p-5">
-        @Model.Exercise5.Name <br />
-        Sets: @Model.Sets <br />
-        Reps: @Model.Reps <br />
-        LINK TO VIDEO
-    </div>
+                    <hr class="ex-break" />
 
-    <div class="exercise p-5">
-        @Model.Exercise6.Name <br />
-        Sets: @Model.Sets <br />
-        Reps: @Model.Reps <br />
-        LINK TO VIDEO
+                    <div class="exercise p-2">
+                        <strong>@Model.Exercise3.Name</strong><br />
+                        Sets: @Model.Sets<br />
+                        Reps: @Model.Reps<br />
+                        <a asp-controller="Workout" asp-action="Help" asp-route-name="@Model.Exercise3.Name">Watch a demo</a>
+                    </div>
+
+                    <hr class="ex-break" />
+
+                    <div class="exercise p-2">
+                        <strong>@Model.Exercise4.Name</strong><br />
+                        Sets: @Model.Sets<br />
+                        Reps: @Model.Reps<br />
+                        <a asp-controller="Workout" asp-action="Help" asp-route-name="@Model.Exercise4.Name">Watch a demo</a>
+                    </div>
+
+                    <hr class="ex-break" />
+
+                    <div class="exercise p-2">
+                        <strong>@Model.Exercise5.Name</strong><br />
+                        Sets: @Model.Sets<br />
+                        Reps: @Model.Reps<br />
+                        <a asp-controller="Workout" asp-action="Help" asp-route-name="@Model.Exercise5.Name">Watch a demo</a>
+                    </div>
+
+                    <hr class="ex-break" />
+
+                    <div class="exercise p-2">
+                        <strong>@Model.Exercise6.Name</strong><br />
+                        Sets: @Model.Sets<br />
+                        Reps: @Model.Reps<br />
+                        <a asp-controller="Workout" asp-action="Help" asp-route-name="@Model.Exercise6.Name">Watch a demo</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
 }
