Styled navbar and footer

--- a/FitTinaV2/Views/Shared/_Layout.cshtml
+++ b/FitTinaV2/Views/Shared/_Layout.cshtml
@@ -3,46 +3,68 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - FitTinaV2</title>
+    <title>@ViewData["Title"] - FitTina</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+
 </head>
 <body>
+
+    <!-- NEW HEADER WITH NAVBAR -->
+
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">FitTinaV2</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+
+
+
+        <div id="mySidenav" class="sidenav">
+            <ul class="menu">
+                <li class="text-center" style="margin-left: -30px;">
+                    <a asp-controller="Home" asp-action="Index" style="font-size: 2.5em;">
+                        <img src="~/images/tina-t.gif" alt="tina" height="70" /><br />
+                        :fittina:
+                    </a>
+                </li>
+                <hr />
+                <li class='@(ViewBag.Current == "CreateProfile" ? "active" : "")'><a asp-controller="User" asp-action="CreateProfile">Create a Profile</a></li>
+                <li class='@(ViewBag.Current == "Profile" ? "active" : "")'><a asp-controller="User" asp-action="Profile">My Profile</a></li>
+                <li class='@(ViewBag.Current == "Build" ? "active" : "")'><a asp-controller="Workout" asp-action="Build">Build a Workout</a></li>
+                <li class='@(ViewBag.Current == "Library" ? "active" : "")'><a asp-controller="Workout" asp-action="Library">My Workouts</a></li>
+                <li class='@(ViewBag.Current == "Help" ? "active" : "")'><a asp-controller="Workout" asp-action="Help">Get Help</a></li>
+
+            </ul>
+
+        </div>
+
+
+
     </header>
+
+    <!-- END NEW HEADER -->
+
+
+
+
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - FitTinaV2 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <br />
+    <br />
+    <br />
+    <footer class="footer text-muted">
+        <hr class="footer-hr" />
+        <div class="footer-inner">
+            &copy; 2020 - FitTina - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
     @RenderSection("Scripts", required: false)
+
 </body>
 </html>
