--- a/FitTinaV2/Views/Workout/Build.cshtml
+++ b/FitTinaV2/Views/Workout/Build.cshtml
@@ -84,7 +84,11 @@ else
                         <strong>@Model.Exercise1.Name</strong><br />
                         Sets: @Model.Sets<br />
                         Reps: @Model.Reps<br />
-                        <a asp-controller="Workout" asp-action="Help" asp-route-name="@Model.Exercise1.Name">Watch a demo</a>
+
+                        <form method="post" asp-action="Help" id="ex1">
+                            <input type="hidden" name="name" value="@Model.Exercise1.Name" />
+                            <a class="demo" onclick="document.getElementById('ex1').submit(); return false;">Watch a Demo</a>
+                        </form>
                     </div>
 
                     <hr class="ex-break" />
@@ -93,7 +97,11 @@ else
                         <strong>@Model.Exercise2.Name</strong><br />
                         Sets: @Model.Sets<br />
                         Reps: @Model.Reps<br />
-                        <a asp-controller="Workout" asp-action="Help" asp-route-name="@Model.Exercise2.Name">Watch a demo</a>
+
+                        <form method="post" asp-action="Help" id="ex2">
+                            <input type="hidden" name="name" value="@Model.Exercise2.Name" />
+                            <a class="demo" onclick="document.getElementById('ex2').submit(); return false;">Watch a Demo</a>
+                        </form>
                     </div>
 
                     <hr class="ex-break" />
@@ -102,7 +110,11 @@ else
                         <strong>@Model.Exercise3.Name</strong><br />
                         Sets: @Model.Sets<br />
                         Reps: @Model.Reps<br />
-                        <a asp-controller="Workout" asp-action="Help" asp-route-name="@Model.Exercise3.Name">Watch a demo</a>
+
+                        <form method="post" asp-action="Help" id="ex3">
+                            <input type="hidden" name="name" value="@Model.Exercise3.Name" />
+                            <a class="demo" onclick="document.getElementById('ex3').submit(); return false;">Watch a Demo</a>
+                        </form>
                     </div>
 
                     <hr class="ex-break" />
@@ -111,7 +123,11 @@ else
                         <strong>@Model.Exercise4.Name</strong><br />
                         Sets: @Model.Sets<br />
                         Reps: @Model.Reps<br />
-                        <a asp-controller="Workout" asp-action="Help" asp-route-name="@Model.Exercise4.Name">Watch a demo</a>
+
+                        <form method="post" asp-action="Help" id="ex4">
+                            <input type="hidden" name="name" value="@Model.Exercise4.Name" />
+                            <a class="demo" onclick="document.getElementById('ex4').submit(); return false;">Watch a Demo</a>
+                        </form>
                     </div>
 
                     <hr class="ex-break" />
@@ -120,7 +136,11 @@ else
                         <strong>@Model.Exercise5.Name</strong><br />
                         Sets: @Model.Sets<br />
                         Reps: @Model.Reps<br />
-                        <a asp-controller="Workout" asp-action="Help" asp-route-name="@Model.Exercise5.Name">Watch a demo</a>
+
+                        <form method="post" asp-action="Help" id="ex5">
+                            <input type="hidden" name="name" value="@Model.Exercise5.Name" />
+                            <a class="demo" onclick="document.getElementById('ex5').submit(); return false;">Watch a Demo</a>
+                        </form>
                     </div>
 
                     <hr class="ex-break" />
@@ -129,7 +149,11 @@ else
                         <strong>@Model.Exercise6.Name</strong><br />
                         Sets: @Model.Sets<br />
                         Reps: @Model.Reps<br />
-                        <a asp-controller="Workout" asp-action="Help" asp-route-name="@Model.Exercise6.Name">Watch a demo</a>
+
+                        <form method="post" asp-action="Help" id="ex6">
+                            <input type="hidden" name="name" value="@Model.Exercise6.Name" />
+                            <a class="demo" onclick="document.getElementById('ex6').submit(); return false;">Watch a Demo</a>
+                        </form>
                     </div>
                 </div>
             </div>
